# projectx-bacckend

./: .example.secrets.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  settings.toml
.github/workflows/: python-app.yml
app/: __init__.py
app/adapters/: database.py
app/common/: auth.py
app/enums/: toll_voucher_providers.py  toll_voucher_status_types.py
app/exceptions/: exceptions.py
app/infra/clients/: exceptions.py  minha_receita.py  redis.py  users.py
app/models/: address.py  entities.py  route.py  toll_voucher.py  vehicle.py
app/repositories/: base_repository.py  toll_voucher.py
app/routers/v1/: __init__.py  get_cpfcnpj.py  health_check.py
app/schemas/: get_cpfcnpj.py  minhareceita.py
app/services/: base_service.py  get_cpfcnpj.py  provider.py  users.py
app/services/qualp/: route_parser.py
app/utils/: formatters.py  jwt.py  validator.py
k8s/: Dockerfile  values.yaml
tests/: conftest.py
tests/repositories/: conftest.py
tests/repositories/toll_voucher/: test_create.py  test_get.py  test_list.py
tests/tools/factory/: address_factory.py  shipper_factory.py  toll_voucher_factory.py  vehicle_factory.py
tests/unitary/common/: test_auth.py
tests/unitary/infra/: test_geo.py
tests/unitary/routers/: conftest.py  test_route.py
tests/unitary/services/: test_geo.py  test_route_cache.py
